# aiogram-group-chat-example

./: README.md  main.py  pyproject.toml
bot/: main.py
bot/alembic/: env.py
bot/alembic/versions/: 2025_03_29_1623-48a6c84fc979_create_users_table.py
bot/core/: config.py
bot/core/routers/: __init__.py  main_commands.py
bot/models/: __init__.py  user.py
bot/routers/: __init__.py  main_commands.py  user_commands.py
